fix(auth tests)